--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>IoT Play Sample</title>
+	<title>IBM Watson IoT Platform - Phone Sample</title>
 	<link rel='stylesheet' href='stylesheets/styles.css'/>
 </head>
 <body>
@@ -12,7 +12,7 @@
 			<div class="step">
 				<h3>Step 1: Connect your Smartphone</h3>
 				<p>With your smartphone, visit the following link: <a id="mobileapphref">/iot-phone</a>
-					QR code & short URL: [ <span style="margin-left: 20px; letter-spacing: 1px; font-weight: bold;" id="mobileappurl"></span> ] </p>
+					QR code and short URL: [ <span style="margin-left: 20px; letter-spacing: 1px; font-weight: bold;" id="mobileappurl"></span> ] </p>
 				<p>On your smartphone, you'll be prompted to enter a name for your device "device ID" and to generate a new passcode "access token".</p>
 			</div>
 			<div class="step">
