--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,19 @@
 <html>
 <head>
-	<title>IBM Watson IoT Platform - Phone Sample</title>
+	<title>IBM Watson IoT Platform - Device Simulator</title>
 	<link rel='stylesheet' href='stylesheets/styles.css'/>
 </head>
 <body>
 <div class="outer-main">
 		<div id="main" class="main">
-			<div class="lines"><h1>IBM Watson IoT Platform Example App</h1></div>
-			<h2>Congratulations, you have deployed the IBM Watson IoT Platform example application!</h2>
-			<p class="lead">If you used the Deploy to Bluemix button to get here, then you already have an IBM Watson IoT Platform organization created and ready to receive your data.  Here's how to get started:</p>
+			<div class="lines"><h1>IBM Watson IoT Platform - Device Simulator</h1></div>
+			<h2>Congratulations, you have deployed the IBM Watson IoT Platform device simulator application!</h2>
+			<p class="lead">You'll run this web application on your phone to simulate an IoT device and send accelerometer data to the IBM Watson IoT Platform service.
+				If you used the Deploy to Bluemix button to get here, then you already have an IBM Watson IoT Platform organization created and ready to receive your data.  Here's how to get started:</p>
 			<div class="step">
 				<h3>Step 1: Connect your Smartphone</h3>
-				<p>With your smartphone, visit the following link: <a id="mobileapphref">/iot-phone</a>
-					QR code and short URL: [ <span style="margin-left: 20px; letter-spacing: 1px; font-weight: bold;" id="mobileappurl"></span> ] </p>
+				<p>With your smartphone, visit the following link: <a id="mobileapphref">/iot-phone</a> </p>
+				<p>	QR code and short URL: [ <span style="margin-left: 20px; letter-spacing: 1px; font-weight: bold;" id="mobileappurl"></span> ] </p>
 				<p>On your smartphone, you'll be prompted to enter a name for your device "device ID" and to generate a new passcode "access token".</p>
 			</div>
 			<div class="step">
