Trying to fix links

--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,16 @@
 				If you used the Deploy to Bluemix button to get here, then you already have an IBM Watson IoT Platform organization created and ready to receive your data.  Here's how to get started:</p>
 			<div class="step">
 				<h3>Step 1: Connect your Smartphone</h3>
-				<p>With your smartphone, visit the following link: <a id="mobileapphref">/iot-phone</a> </p>
-				<p>	QR code and short URL: [ <span style="margin-left: 20px; letter-spacing: 1px; font-weight: bold;" id="mobileappurl"></span> ] </p>
+				<p>With your smartphone, open this special page:
+				<ol>
+					<li>URL 1: [ <span style="margin-left: 20px; letter-spacing: 1px; font-weight: bold;" id="mobileappurl"></span> ]</li>
+					<li>URL 2: <a id="mobileapphref">/iot-phone</a> </li>
+					<li>URL 3: <a href=mobileappurl><span id="mobileappurl"></span></a> </li>
+					<li>QR: </li>
+					<li>Mailto: </li>
+				</ol>
+					</p>
+				<p>QR code and short  </p>
 				<p>On your smartphone, you'll be prompted to enter a name for your device "device ID" and to generate a new passcode "access token".</p>
 			</div>
 			<div class="step">
