Replace jQuery & Paho MQTT with CDN versions, and MQTT now supports "useSSL" out of the box

--- a/public/iot-phone/index.html
+++ b/public/iot-phone/index.html
@@ -66,9 +66,10 @@
 		</div>
 		<div class="iot-footer-pad"></div>
 	</div>
+
 	<!-- Please do not change the order of these links as some depend on each other -->
-	<script type="text/javascript" src="js/jquery.min.js"></script>
-	<script type="text/javascript" src="js/mqttws31.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.min.js" type="text/javascript"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.min.js" type="text/javascript"></script>
 	<script type="text/javascript" src="js/device.js"></script>
 </body>
 </html>
